# jepa_reasoner

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  math_small.json  multi_domain.json
docs/: design_doc.md
jepa_reasoner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: train_colab.ipynb
scripts/: download_data.sh  eval_all.sh  retrain_with_feedback.sh  train_all.sh
src/: __init__.py  decoders.py  decoders_v2.py  encoders.py  encoders_v2.py  evaluate.py  feedback_train.py  latent_graph.py  llm_interface.py  models.py  models_v2.py  predictors.py  predictors_v2.py  train.py
src/utils/: __init__.py  data_loading.py  metrics.py
