[project]
name = "jepa_reasoner"
version = "0.1.0"
description = "I-JEPA-inspired cross-domain latent reasoning system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "sentence-transformers>=3.0.0",
  "accelerate>=0.33.0",
  "datasets>=3.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.2.0",
  "tqdm>=4.66.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
]

[tool.setuptools]
py-modules = []
